SSCS-10950 modernizes AdjournCaseIt